# galera

./: .bzrignore  .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  CONTRIBUTOR_AGREEMENT.txt  COPYING  GALERA-REVISION  GALERA_VERSION  README  SConscript  SConstruct
galera/: ChangeLog  SConscript  bootstrap.sh  configure.ac
galera/src/: CMakeLists.txt  Makefile.am  SConscript  action_source.hpp  apply_monitor.hpp  certification.cpp  certification.hpp  data_set.cpp  data_set.hpp  dummy.c  event_service.cpp  event_service.hpp  fsm.hpp  galera-sym.map  galera.c  galera.h  galera_certification.cpp  galera_certification.hpp  galera_common.hpp  galera_exception.hpp  galera_gcs.hpp  galera_info.c  galera_info.cpp  galera_info.h  galera_info.hpp  galera_job_queue.c  galera_job_queue.h  galera_options.c  galera_options.h  galera_service_thd.cpp  galera_service_thd.hpp  galera_state.c  galera_state.h  galera_status.c  galera_status.h  galera_view.cpp  galera_view.hpp  galera_write_set.cpp  galera_write_set.hpp  galera_wsdb.cpp  (+63 more)
galera/test/: SConscript  test_write_set.cpp
galera/tests/: CMakeLists.txt  SConscript  certification_check.cpp  data_set_check.cpp  defaults_check.cpp  galera_check.cpp  ist_check.cpp  key_set_check.cpp  progress_check.cpp  saved_state_check.cpp  service_thd_check.cpp  test_key.hpp  trx_handle_check.cpp  write_set_check.cpp  write_set_ng_check.cpp
galeracomm/: COPYING  Makefile.am  README  bootstrap.sh  configure.ac
galeracomm/vs/: Makefile.am
galerautils/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  SConscript  bootstrap.sh  configure.ac
galerautils/doc/: Doxyfile
galerautils/src/: CMakeLists.txt  Makefile.am  SConscript  avalanche.c  galerautils.h  galerautils.hpp  gu_abort.c  gu_abort.h  gu_alloc.cpp  gu_alloc.hpp  gu_arch.h  gu_array.hpp  gu_asio.cpp  gu_asio.hpp  gu_asio_datagram.cpp  gu_asio_datagram.hpp  gu_asio_debug.hpp  gu_asio_error_category.hpp  gu_asio_io_service_impl.hpp  gu_asio_ip_address_impl.hpp  gu_asio_socket_util.hpp  gu_asio_ssl.hpp  gu_asio_stream_engine.cpp  gu_asio_stream_engine.hpp  gu_asio_stream_react.cpp  gu_asio_stream_react.hpp  gu_asio_utils.hpp  gu_assert.h  gu_assert.hpp  gu_atomic.h  gu_atomic.hpp  gu_backtrace.c  gu_backtrace.h  gu_backtrace.hpp  gu_barrier.hpp  gu_buf.h  gu_buf.hpp  gu_buffer.cpp  gu_buffer.hpp  gu_byteswap.h  (+138 more)
galerautils/tests/: CMakeLists.txt  Makefile.am  SConscript  copy_vs_assignment.cpp  crc32c_bench.cpp  deqmap_bench.cpp  gu_alloc_test.cpp  gu_alloc_test.hpp  gu_asio_test.cpp  gu_asio_test.hpp  gu_atomic_test.cpp  gu_atomic_test.hpp  gu_bswap_test.c  gu_bswap_test.h  gu_config_test.cpp  gu_config_test.hpp  gu_crc32c_test.c  gu_crc32c_test.h  gu_datetime_test.cpp  gu_datetime_test.hpp  gu_dbug_test.c  gu_dbug_test.h  gu_deqmap_test.cpp  gu_deqmap_test.hpp  gu_digest_test.cpp  gu_digest_test.hpp  gu_fifo_test.c  gu_fifo_test.h  gu_fnv_test.c  gu_fnv_test.h  gu_gtid_test.cpp  gu_gtid_test.hpp  gu_hash_test.c  gu_hash_test.h  gu_histogram_test.cpp  gu_histogram_test.hpp  gu_lock_step_test.c  gu_lock_step_test.h  gu_mem_pool_test.cpp  gu_mem_pool_test.hpp  (+43 more)
garb/: CMakeLists.txt  SConscript  garb_config.cpp  garb_config.hpp  garb_gcs.cpp  garb_gcs.hpp  garb_logger.cpp  garb_logger.hpp  garb_main.cpp  garb_recv_loop.cpp  garb_recv_loop.hpp
garb/files/: garb-systemd  garb.cnf  garb.service  garb.sh  garbd.troff
gcache/: README  bootstrap.sh  configure.ac
gcache/src/: BufferHeader.hpp  CMakeLists.txt  Exception.hpp  FileDescriptor.cpp  FileDescriptor.hpp  GCache.cpp  GCache.hpp  GCache_header.cpp  GCache_memops.cpp  GCache_seqno.cpp  Lock.hpp  Logger.cpp  MMap.cpp  MMap.hpp  Makefile.am  Mutex.hpp  SConscript  SeqnoNone.hpp  gcache.h  gcache_bh.hpp  gcache_fd.cpp  gcache_fd.hpp  gcache_limits.hpp  gcache_mem_store.cpp  gcache_mem_store.hpp  gcache_memops.hpp  gcache_mmap.cpp  gcache_mmap.hpp  gcache_page.cpp  gcache_page.hpp  gcache_page_store.cpp  gcache_page_store.hpp  gcache_params.cpp  gcache_rb_store.cpp  gcache_rb_store.hpp  gcache_seqno.hpp  gcache_types.hpp  test.cpp
gcache/tests/: CMakeLists.txt  SConscript  gcache_mem_test.cpp  gcache_mem_test.hpp  gcache_page_test.cpp  gcache_page_test.hpp  gcache_rb_test.cpp  gcache_rb_test.hpp  gcache_tests.cpp  gcache_tests.hpp
gcomm/: CMakeLists.txt  COPYING  Makefile.am  SConscript  bootstrap.sh  configure.ac
gcomm/doc/: Doxyfile  Makefile.am
gcomm/src/: CMakeLists.txt  Makefile.am  SConscript  asio.cpp  asio.hpp  asio_addr.hpp  asio_protonet.cpp  asio_protonet.hpp  asio_tcp.cpp  asio_tcp.hpp  asio_udp.cpp  asio_udp.hpp  conf.cpp  datagram.cpp  defaults.cpp  defaults.hpp  event.cpp  evs.cpp  evs.hpp  evs_consensus.cpp  evs_consensus.hpp  evs_input_map.cpp  evs_input_map.hpp  evs_input_map2.cpp  evs_input_map2.hpp  evs_message.hpp  evs_message2.cpp  evs_message2.hpp  evs_node.cpp  evs_node.hpp  evs_proto.cpp  evs_proto.hpp  evs_seqno.cpp  evs_seqno.hpp  evs_version.hpp  fair_send_queue.hpp  gmcast.cpp  gmcast.hpp  gmcast_link.hpp  gmcast_message.hpp  (+38 more)
gcomm/test/: CMakeLists.txt  Makefile.am  SConscript  check_buffer.cpp  check_concurrent.cpp  check_event.cpp  check_evs.cpp  check_evs2.cpp  check_fair_send_queue.cpp  check_gcomm.cpp  check_gcomm.hpp  check_gcomm_nondet.cpp  check_gmcast.cpp  check_pc.cpp  check_pc_nondet.cpp  check_tcp.cpp  check_templ.hpp  check_trace.cpp  check_trace.hpp  check_types.cpp  check_util.cpp  check_util_nondet.cpp  check_vs.cpp  ssl_test.cpp
gcs/: CMakeLists.txt  ChangeLog  Makefile.am  README  SConscript  bootstrap.sh  configure.ac
gcs/doc/: Coding_conventions.txt  Doxyfile  GCS_Architecture.odt  GCS_connection_states.txt  Makefile.am
gcs/src/: CMakeLists.txt  Makefile.am  SConscript  gcs.c  gcs.cpp  gcs.h  gcs.hpp  gcs_act.h  gcs_act.hpp  gcs_act_cchange.cpp  gcs_act_conf.cpp  gcs_act_proto.c  gcs_act_proto.cpp  gcs_act_proto.h  gcs_act_proto.hpp  gcs_backend.c  gcs_backend.cpp  gcs_backend.h  gcs_backend.hpp  gcs_code_msg.cpp  (+89 more)
gemini/: Makefile.am  README  configure.ac
wsdb/: Makefile.am  README  SConscript  configure.ac
(+853 files in other folders)
